🐛💄 Fixed alignment and padding of sections

--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -3,7 +3,6 @@
 .hero {
     background: url("../public/img/hero.jpg");
     height: 100vh;
-    width: 100vw;
     color: $primary;
     font-weight: 400;
     text-align: center;
