--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,12 +1,7 @@
 @import "./index.module.scss";
 
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
 }
 
